[gd_scene load_steps=7 format=3 uid="uid://bs1s4hfhyt87k"]

[ext_resource type="Script" path="res://translation_demo.gd" id="1"]
[ext_resource type="FontFile" path="res://fonts/droid_sans.tres" id="2_qi2qa"]
[ext_resource type="Texture2D" uid="uid://eansk1uek5v7" path="res://speaker.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b7kmo1vsgmdsm" path="res://flags/flag_uk.png" id="4_123i0"]
[ext_resource type="AudioStream" uid="uid://brmghkngaxnqv" path="res://voices/hello_en.wav" id="5_sgrcn"]
[ext_resource type="PackedScene" uid="uid://c6cmg77fwn7wb" path="res://items_menu.tscn" id="6_pmrqs"]

[node name="TranslationDemo" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -300.0
offset_right = 512.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 196.0
offset_bottom = 169.0
theme_override_constants/separation = 15

[node name="English" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Use English"

[node name="French" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Use French"

[node name="Spanish" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Use Spanish"

[node name="Japanese" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Use Japanese"

[node name="Description" type="Label" parent="."]
layout_mode = 0
offset_left = 243.0
offset_top = 42.0
offset_right = 804.0
offset_bottom = 312.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_qi2qa")
text = "This is a demo of how a game can be internationalized.
Translations are created in a CSV file and then imported into Godot.

Using a TTF/OTF font with CJK is required for this demo to run. One is provided
in the font/ folder that you can use for your games.

Godot allows internationalized text to change automatically when the locale is
modified. Resources can also be set internationalized alternatives and replaced
automatically on locale change."

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 330.0
offset_right = 1001.0
offset_bottom = 370.0

[node name="HelloText" type="Label" parent="."]
layout_mode = 0
offset_left = 246.0
offset_top = 381.0
offset_right = 475.0
offset_bottom = 405.0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_qi2qa")
text = "Hello!"

[node name="PlayAudio" type="Button" parent="."]
layout_mode = 0
offset_left = 243.0
offset_top = 442.0
offset_right = 475.0
offset_bottom = 467.0
theme_override_fonts/font = ExtResource("2_qi2qa")
text = "Click me"
icon = ExtResource("3")

[node name="Flag" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 382.0
offset_right = 213.0
offset_bottom = 467.0
texture = ExtResource("4_123i0")

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_sgrcn")

[node name="ItemsMenu" parent="." instance=ExtResource("6_pmrqs")]
layout_mode = 1
offset_left = -15.0
offset_top = -78.0
offset_right = 15.0
offset_bottom = 18.0

[connection signal="pressed" from="VBoxContainer/English" to="." method="_on_english_pressed"]
[connection signal="pressed" from="VBoxContainer/French" to="." method="_on_french_pressed"]
[connection signal="pressed" from="VBoxContainer/Spanish" to="." method="_on_spanish_pressed"]
[connection signal="pressed" from="VBoxContainer/Japanese" to="." method="_on_japanese_pressed"]
[connection signal="pressed" from="PlayAudio" to="." method="_on_play_pressed"]
